removed vendor prefixes. ready to be merged

--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-003.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-003.html
@@ -20,9 +20,9 @@
             width: 230px;
             height: 200px;
             color: green;
-            -webkit-columns: 2;
-            -webkit-column-gap: 30px;
-            -webkit-flow-into: multicol;
+            columns: 2;
+            column-gap: 30px;
+            flow-into: multicol;
         }
         #region {
             position: absolute;
@@ -30,7 +30,7 @@
             left: 20px;
             width: 230px;
             height: 200px;
-            -webkit-flow-from: multicol;
+            flow-from: multicol;
         }
         .failure {
            position: absolute;
