--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-004.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-004.html
@@ -18,7 +18,7 @@
             font-size: 20px;
             line-height: 1em;
             color: green;
-            -webkit-flow-into: multicol;
+            flow-into: multicol;
         }
         #multicol-region {
             position: absolute;
@@ -26,9 +26,9 @@
             left: 20px;
             width: 360px;
             height: 200px;
-            -webkit-columns: 3;
-            -webkit-column-gap: 30px;
-            -webkit-flow-from: multicol;
+            columns: 3;
+            column-gap: 30px;
+            flow-from: multicol;
         }
         .failure {
             position: absolute;
