--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-012.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-012.html
@@ -14,10 +14,10 @@
         #named-flow-multicol {
             width: 360px;
             height: 200px;
-            -webkit-columns: 3;
-            -webkit-column-gap: 30px;
-            -webkit-column-rule: none;
-            -webkit-flow-into: multicol;
+            columns: 3;
+            column-gap: 30px;
+            column-rule: none;
+            flow-into: multicol;
         }
         .named-flow-block {
             width: 100px;
@@ -35,7 +35,7 @@
             left: 20px;
             width: 230px;
             height: 200px;
-            -webkit-flow-from: multicol;
+            flow-from: multicol;
         }
         .failure {
            position: absolute;
