--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-015.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-015.html
@@ -18,15 +18,15 @@
             font-size: 25px;
             line-height: 1em;
             color: green;
-            -webkit-columns: 2;
-            -webkit-column-gap: 10px;
-            -webkit-flow-into: multicol;
+            columns: 2;
+            column-gap: 10px;
+            flow-into: multicol;
         }
         #region-1 , #region-2 {
             position: absolute;
             top: 50px;
             width: 110px;
-            -webkit-flow-from: multicol;
+            flow-from: multicol;
         }
         #region-1 {
             left: 20px;
