--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-016.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-016.html
@@ -18,16 +18,16 @@
             background-color: green;
             width: 50px;
             height: 900px;
-            -webkit-columns: 2;
-            -webkit-column-gap: 10px;
-            -webkit-flow-into: multicol;
+            columns: 2;
+            column-gap: 10px;
+            flow-into: multicol;
             
         }
         #region-1 , #region-2 {
             position: absolute;
             top: 75px;
             width: 110px;
-            -webkit-flow-from: multicol;
+            flow-from: multicol;
         }
         #region-1 {
             left: 20px;
