--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-017.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-017.html
@@ -20,8 +20,8 @@
             width: 200px;
             height: 200px;
             border: 2px solid black;
-            -webkit-columns: 4;
-            -webkit-column-gap: 0;
+            columns: 4;
+            column-gap: 0;
         }
         .named-flow {
             font-family: Ahem;
@@ -38,16 +38,16 @@
             color: gray;
         }
         .region.black {
-          -webkit-flow-from: multicol-1;
+          flow-from: multicol-1;
         }
         .named-flow.black {
-          -webkit-flow-into: multicol-1;
+          flow-into: multicol-1;
         }
         .region.gray{
-          -webkit-flow-from: multicol-2;
+          flow-from: multicol-2;
         }
         .named-flow.gray {
-          -webkit-flow-into: multicol-2;
+          flow-into: multicol-2;
         }
         #failure {
             position: absolute;
