--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-006.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-006.html
@@ -20,7 +20,7 @@
             font-size: 20px;
             line-height: 1em;
             color: green;
-            -webkit-flow-into: multicol;
+            flow-into: multicol;
         }
         #multicol-region {
             position: absolute;
@@ -28,16 +28,16 @@
             left: 20px;
             width: 230px;
             height: 200px;
-            -webkit-columns: 2;
-            -webkit-column-gap: 30px;
-            -webkit-flow-from: multicol;
+            columns: 2;
+            column-gap: 30px;
+            flow-from: multicol;
         }
         #remainder-region {
             position: absolute;
             top: 170px;
             left: 280px;
             width: 100px;
-            -webkit-flow-from: multicol;
+            flow-from: multicol;
         }
         .failure {
             position: absolute;
