--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-008.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-008.html
@@ -16,7 +16,7 @@
                                  
     <style type="text/css">
         #named-flow {
-            -webkit-flow-into: multicol;
+            flow-into: multicol;
         }
         #named-flow-child-1, #named-flow-child-2 {
             width: 100px;
@@ -34,16 +34,16 @@
             left: 20px;
             width: 230px;
             height: 200px;
-            -webkit-columns: 2;
-            -webkit-column-gap: 30px;
-            -webkit-flow-from: multicol;
+            columns: 2;
+            column-gap: 30px;
+            flow-from: multicol;
         }
         #remainder-region {
             position: absolute;
             top: 170px;
             left: 280px;
             width: 100px;
-            -webkit-flow-from: multicol;
+            flow-from: multicol;
         }
         .failure {
             position: absolute;
