--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-009.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-009.html
@@ -18,14 +18,14 @@
             font-size: 20px;
             line-height: 1em;
             color: green;
-            -webkit-flow-into: multicol;
+            flow-into: multicol;
         }
         #first-region {
             position: absolute;
             top: 170px;
             left: 20px;
             width: 100px;
-            -webkit-flow-from: multicol;
+            flow-from: multicol;
         }
         #multicol-region {
             position: absolute;
@@ -33,9 +33,9 @@
             left: 150px;
             width: 230px;
             height: 200px;
-            -webkit-columns: 2;
-            -webkit-column-gap: 30px;
-            -webkit-flow-from: multicol;
+            columns: 2;
+            column-gap: 30px;
+            flow-from: multicol;
         }
         .failure {
             position: absolute;
