--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-011.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-011.html
@@ -16,7 +16,7 @@
         #named-flow {
             width: 100px;
             height: 500px;
-            -webkit-flow-into: multicol;
+            flow-into: multicol;
         }
         #named-flow-child-1 {
             width: 100px;
@@ -33,7 +33,7 @@
             top: 170px;
             left: 20px;
             width: 100px;
-            -webkit-flow-from: multicol;
+            flow-from: multicol;
         }
         #multicol-region {
             position: absolute;
@@ -41,9 +41,9 @@
             left: 150px;
             width: 230px;
             height: 200px;
-            -webkit-columns: 2;
-            -webkit-column-gap: 30px;
-            -webkit-flow-from: multicol;
+            columns: 2;
+            column-gap: 30px;
+            flow-from: multicol;
         }
         .failure {
             position: absolute;
