--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-019.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-019.html
@@ -17,16 +17,16 @@
             font-family: Ahem;
             font-size: 25px;
             line-height: 1em;
-            -webkit-columns: 2;
-            -webkit-column-gap: 50px;
+            columns: 2;
+            column-gap: 50px;
         }
         .green {
             color: green;
-            -webkit-flow-into: multicol-1;
+            flow-into: multicol-1;
         }
         .blue {
             color: blue;
-            -webkit-flow-into: multicol-2;
+            flow-into: multicol-2;
         }
         #region-1, #region-2 {
             position: absolute;
@@ -34,11 +34,11 @@
         }
         #region-1 {
             left: 20px;
-            -webkit-flow-from: multicol-1;
+            flow-from: multicol-1;
         }
         #region-2 {
             left: 70px;
-            -webkit-flow-from: multicol-2;
+            flow-from: multicol-2;
         }
         #failure {
             position: absolute;
