Revert "Correct the character value for unicode char HORIZONTAL ELLIPSIS (U+2026) in assertion"
This reverts commit c36d9eb2dc051e12588a4af46cbfc413758eac24.

As discussed, this test case scopes only ASCII characters for HTTP header field valuses.

--- a/XMLHttpRequest/getresponseheader-special-characters.htm
+++ b/XMLHttpRequest/getresponseheader-special-characters.htm
@@ -17,7 +17,7 @@
             if(client.readyState == 4) {
               assert_equals(client.getResponseHeader("x-custom-header "), null)
               assert_equals(client.getResponseHeader(" x-custom-header"), null)
-              assert_equals(client.getResponseHeader("x-custom-header-bytes"), "\u2026")
+              assert_equals(client.getResponseHeader("x-custom-header-bytes"), "\xE2\x80\xA6")
               assert_equals(client.getResponseHeader("x¾"), null)
               assert_equals(client.getResponseHeader("x-custom-header\n"), null)
               assert_equals(client.getResponseHeader("\nx-custom-header"), null)
