Added placeholder comment.

--- a/notifications/interfaces.html
+++ b/notifications/interfaces.html
@@ -12,6 +12,7 @@ interface EventTarget {
   void removeEventListener(DOMString type, EventListener? callback, optional boolean capture /* = false */);
   boolean dispatchEvent(Event event);
 };
+// need to add EventHandler here
 </script>
 <script type=text/plain>
 [Constructor(DOMString title, optional NotificationOptions options)]
