--- a/notifications/interfaces.html
+++ b/notifications/interfaces.html
@@ -12,7 +12,9 @@ interface EventTarget {
   void removeEventListener(DOMString type, EventListener? callback, optional boolean capture /* = false */);
   boolean dispatchEvent(Event event);
 };
-// need to add EventHandler here
+[TreatNonCallableAsNull]
+callback EventHandlerNonNull = any (Event event);
+typedef EventHandlerNonNull? EventHandler;
 </script>
 <script type=text/plain>
 [Constructor(DOMString title, optional NotificationOptions options)]
