--- a/html/semantics/embedded-content-0/media-elements/canPlayType_codecs_order_2.html
+++ b/html/semantics/embedded-content-0/media-elements/canPlayType_codecs_order_2.html
@@ -3,7 +3,7 @@
  <head>
   <title>video.canPlayType() - codecs parameter order</title>
   <script src="/resources/testharness.js"></script>
-  <script src="/resources/testharnessreport.js"></script>
+  <script /resources/testharnessreport.js></script>
  </head>
  <body>
   <p><a href="http://dev.w3.org/html5/spec/Overview.html#mime-types">spec reference</a></p>
@@ -14,8 +14,8 @@
 test(function() {
  var v = document.getElementById("v");
   assert_equals(
-   v.canPlayType('video/webm; codecs="vp8, vorbis"'),
-   v.canPlayType('video/webm; codecs="vorbis, vp8"'),
+   v.canPlayType('video/ogg; codecs="theora, vorbis"'),
+   v.canPlayType('video/ogg; codecs="vorbis, theora"'),
    "order of codecs parameters should have no effect");
 });
   </script>
