--- a/html/semantics/embedded-content-0/media-elements/preload_reflects_bogus_value.html
+++ b/html/semantics/embedded-content-0/media-elements/preload_reflects_bogus_value.html
@@ -1,14 +1,16 @@
 <!doctype html>
 <html>
  <head>
-  <title>audio.preload - reflection test</title>
+  <title>{audio,video}.preload - reflection test</title>
   <script src="/resources/testharness.js"></script>
-  <script src="/resources/testharnessreport.js"></script>
+  <script /resources/testharnessreport.js></script>
  </head>
  <body>
   <p><a href="http://dev.w3.org/html5/spec/Overview.html#dom-media-preload">spec reference</a></p>
   <audio id="audio" preload="marks-fantasmagorical-preload-state">
   </audio>
+  <video id="video" preload="marks-fantasmagorical-preload-state">
+  </video>
   <div id="log"></div>
   <script>
 test(function() {
@@ -16,7 +18,14 @@ test(function() {
   document.getElementById("audio").preload,
   "auto",
   "audioElement.preload reflects bogus value as 'auto'");
-});
+}, "audio.preload - reflection test");
+
+test(function() {
+ assert_equals(
+  document.getElementById("video").preload,
+  "auto",
+  "videoElement.preload reflects bogus value as 'auto'");
+}, "video.preload - reflection test");
   </script>
  </body>
 </html>
