--- a/html/semantics/embedded-content-0/media-elements/preload_reflects_no_value.html
+++ b/html/semantics/embedded-content-0/media-elements/preload_reflects_no_value.html
@@ -1,22 +1,31 @@
 <!doctype html>
 <html>
  <head>
-  <title>video.preload - reflection test</title>
+  <title>{audio,video}.preload - reflection test</title>
   <script src="/resources/testharness.js"></script>
-  <script src="/resources/testharnessreport.js"></script>
+  <script /resources/testharnessreport.js></script>
  </head>
  <body>
   <p><a href="http://dev.w3.org/html5/spec/Overview.html#dom-media-preload">spec reference</a></p>
+  <audio id="audio">
+  </audio>
   <video id="video">
   </video>
   <div id="log"></div>
   <script>
 test(function() {
  assert_equals(
+  document.getElementById("audio").preload,
+  "auto",
+  "audioElement.preload absence reflects 'none' value");
+}, "audio.preload - reflection test");
+
+test(function() {
+ assert_equals(
   document.getElementById("video").preload,
   "auto",
   "videoElement.preload absence reflects 'none' value");
-});
+}, "video.preload - reflection test");
   </script>
  </body>
 </html>
