--- a/contributors/adobe/submitted/regions/interactivity/full-screen/fullscreen-region-content-005.html
+++ b/contributors/adobe/submitted/regions/interactivity/full-screen/fullscreen-region-content-005.html
@@ -14,7 +14,7 @@
 		<script src="support/util.js"></script>
 		<style>
 		#content {
-			-webkit-flow-into: flow;
+			flow-into: flow;
 		}
 		#content p {
 			color: green;
@@ -24,7 +24,7 @@
 			margin: 0;
 		}
 		.region {
-			-webkit-flow-from: flow;
+			flow-from: flow;
 			max-height: 60px;
 			margin-right: 10px;
 			float: left;
