--- a/contributors/adobe/submitted/regions/interactivity/full-screen/fullscreen-region-content-006.html
+++ b/contributors/adobe/submitted/regions/interactivity/full-screen/fullscreen-region-content-006.html
@@ -20,7 +20,7 @@
 			margin: 0 0 20px 0;
 		}
 		#content {
-			-webkit-flow-into: flow;
+			flow-into: flow;
 			color: green;
 			font-family: Ahem;
 			font-size: 20px;
@@ -28,7 +28,7 @@
 			margin: 0;
 		}
 		#region {
-			-webkit-flow-from: flow;
+			flow-from: flow;
 		}
 		#region > p {
 			background: red;
