--- a/contributors/adobe/submitted/regions/interactivity/full-screen/fullscreen-region-content-007.html
+++ b/contributors/adobe/submitted/regions/interactivity/full-screen/fullscreen-region-content-007.html
@@ -14,7 +14,7 @@
 		<script src="support/util.js"></script>
 		<style>
 		#content {
-			-webkit-flow-into: flow;
+			flow-into: flow;
 			color: green;
 			font-family: Ahem;
 			font-size: 20px;
@@ -22,7 +22,7 @@
 			margin: 0;
 		}
 		#region {
-			-webkit-flow-from: flow;
+			flow-from: flow;
 			width: 100px;
 			height: 100px;
 		}
