--- a/contributors/adobe/submitted/regions/interactivity/full-screen/fullscreen-region-content-009.html
+++ b/contributors/adobe/submitted/regions/interactivity/full-screen/fullscreen-region-content-009.html
@@ -15,7 +15,7 @@
 		<script src="support/util.js"></script>
 		<style>
 		#content {
-			-webkit-flow-into: flow;
+			flow-into: flow;
 			color: green;
 			font-family: Ahem;
 			font-size: 20px;
@@ -23,7 +23,7 @@
 			margin: 0;
 		}
 		#region {
-			-webkit-flow-from: flow;
+			flow-from: flow;
 			width: 100px;
 			height: 100px;
 		}
@@ -31,7 +31,7 @@
 			background: red;
 
 		}
-		#region:-webkit-full-screen {
+		#region:full-screen {
 			width: auto;
 			height: auto;
 		}
