--- a/contributors/adobe/submitted/regions/interactivity/full-screen/fullscreen-region-content-010.html
+++ b/contributors/adobe/submitted/regions/interactivity/full-screen/fullscreen-region-content-010.html
@@ -15,7 +15,7 @@
 		<script src="support/util.js"></script>
 		<style>
 		#content {
-			-webkit-flow-into: flow;
+			flow-into: flow;
 			color: green;
 			font-family: Ahem;
 			font-size: 20px;
@@ -26,7 +26,7 @@
 			color: lightblue;
 		}
 		.region {
-			-webkit-flow-from: flow;
+			flow-from: flow;
 			width: 100px;
 			height: 100px;
 		}
