--- a/contributors/adobe/submitted/regions/interactivity/full-screen/fullscreen-region-content-001.html
+++ b/contributors/adobe/submitted/regions/interactivity/full-screen/fullscreen-region-content-001.html
@@ -14,10 +14,10 @@
 		<script src="support/util.js"></script>
 		<style>
 		#content {
-			-webkit-flow-into: flow;
+			flow-into: flow;
 		}
 		#region {
-			-webkit-flow-from: flow;
+			flow-from: flow;
 		}
 		#region > p {
 			background: red;
