--- a/html/semantics/embedded-content-0/media-elements/canPlayType_supported_but_no_codecs_parameter_1.html
+++ b/html/semantics/embedded-content-0/media-elements/canPlayType_supported_but_no_codecs_parameter_1.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
  <head>
-   <title>{audio,video}.canPlayType() - supported format w/o codecs parameter</title>
+  <title>{audio,video}.canPlayType() - supported format w/o codecs parameter</title>
   <script src="/resources/testharness.js"></script>
-  <script /resources/testharnessreport.js></script>
+  <script src="/resources/testharnessreport.js"></script>
  </head>
  <body>
   <p><a href="http://dev.w3.org/html5/spec/Overview.html#dom-navigator-canplaytype">spec reference</a></p>
