--- a/html/semantics/embedded-content-0/media-elements/currentSrc_nonempty_after_adding_source_child.html
+++ b/html/semantics/embedded-content-0/media-elements/currentSrc_nonempty_after_adding_source_child.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
  <head>
-   <title>{audio,video}.currentSrc - non-empty after adding source element</title>
+  <title>{audio,video}.currentSrc - non-empty after adding source element</title>
   <script src="/resources/testharness.js"></script>
-  <script /resources/testharnessreport.js></script>
+  <script src="/resources/testharnessreport.js"></script>
  </head>
  <body>
   <p><a href="http://dev.w3.org/html5/spec/Overview.html#dom-media-currentsrc">spec reference</a></p>
