--- a/html/semantics/embedded-content-0/media-elements/event_play_noautoplay.html
+++ b/html/semantics/embedded-content-0/media-elements/event_play_noautoplay.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
  <head>
-  <title>{audio,video} events - paused property</title>
+  <title>{audio,video} events - play</title>
   <script src="/resources/testharness.js"></script>
   <script src="/resources/testharnessreport.js"></script>
   <script src="../../../../common/media.js"></script>
@@ -15,32 +15,32 @@
   <div id="log"></div>
   <script>
 test(function() {
-  var t = async_test("audio.paused should be true during pause event", {timeout:30000});
+  var t = async_test("calling play() on audio should trigger play event", {timeout:30000});
   var a = document.getElementById("a");
-  a.addEventListener("pause", function() {
+  a.addEventListener("play", function() {
     t.step(function() {
-     assert_true(a.paused);
+     assert_true(true);
     });
     t.done();
+    a.pause();
   }, false);
   a.src = getAudioURI("/media/sound_5") + "?" + new Date() + Math.random();
   a.play();
-  a.pause();
-}, "audio events - paused property");
+}, "audio events - play");
 
 test(function() {
-  var t = async_test("video.paused should be true during pause event", {timeout:30000});
+  var t = async_test("calling play() on video should trigger play event", {timeout:30000});
   var v = document.getElementById("v");
-  v.addEventListener("pause", function() {
+  v.addEventListener("play", function() {
     t.step(function() {
-     assert_true(v.paused);
+     assert_true(true);
     });
     t.done();
+    v.pause();
   }, false);
   v.src = getVideoURI("/media/movie_300") + "?" + new Date() + Math.random();
   v.play();
-  v.pause();
-}, "video events - paused property");
+}, "video events - play");
   </script>
  </body>
 </html>
