--- a/html/semantics/embedded-content-0/media-elements/preload_reflects_metadata.html
+++ b/html/semantics/embedded-content-0/media-elements/preload_reflects_metadata.html
@@ -3,7 +3,7 @@
  <head>
   <title>{audio,video}.preload - reflection test</title>
   <script src="/resources/testharness.js"></script>
-  <script /resources/testharnessreport.js></script>
+  <script src="/resources/testharnessreport.js"></script>
  </head>
  <body>
   <p><a href="http://dev.w3.org/html5/spec/Overview.html#dom-media-preload">spec reference</a></p>
@@ -18,14 +18,14 @@ test(function() {
   document.getElementById("audio").preload,
   "metadata",
   "audioElement.preload reflects 'metadata' value");
-});
+}, "audio.preload - reflection test");
 
 test(function() {
  assert_equals(
   document.getElementById("video").preload,
   "metadata",
   "videoElement.preload reflects 'metadata' value");
-});
+}, "video.preload - reflection test");
   </script>
  </body>
 </html>
