Remove http://w3c-test.org from test files.

--- a/orientation-event/free-fall.html
+++ b/orientation-event/free-fall.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-	  <title>DeviceMotionEvent: A device in free-fall, with the screen horizontal and upmost</title>
-    <script src="http://w3c-test.org/resources/testharness.js"></script>
-    <script src="http://w3c-test.org/resources/testharnessreport.js"></script>
+    <title>DeviceMotionEvent: A device in free-fall, with the screen horizontal and upmost</title>
+    <script src="/resources/testharness.js"></script>
+    <script src="/resources/testharnessreport.js"></script>
     <link rel="author' title='Mosquito FP7">
     <link rel="reviewer author" title="Zhiqiang Zhang" href="mailto:zhiqiang.zhang@intel.com"> <!-- 2013-10-14 -->
   </head>
@@ -45,3 +45,4 @@
   	</script>
   </body>
 </html>
+
