--- a/orientation-event/idlharness.html
+++ b/orientation-event/idlharness.html
@@ -3,10 +3,10 @@
 <title>DeviceOrientation Event IDL tests</title>
 <link rel="author" title="Intel" href="http://www.intel.com">
 <link rel="help" href="http://dev.w3.org/geo/api/spec-source-orientation.html">
-<script src="http://w3c-test.org/resources/testharness.js"></script>
-<script src="http://w3c-test.org/resources/testharnessreport.js"></script>
-<script src="http://w3c-test.org/webidl2.js/lib/webidl2.js"></script>
-<script src="http://w3c-test.org/resources/idlharness.js"></script>
+<script src="/resources/testharness.js"></script>
+<script src="/resources/testharnessreport.js"></script>
+<script src="/webidl2.js/lib/webidl2.js"></script>
+<script src="/resources/idlharness.js"></script>
 <style>
   pre {
     display: none;
