--- a/orientation-event/screen-upmost.html
+++ b/orientation-event/screen-upmost.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-	  <title>DeviceMotionEvent: A device lying flat on a horizontal surface with the screen upmost</title>
-    <script src="http://w3c-test.org/resources/testharness.js"></script>
-    <script src="http://w3c-test.org/resources/testharnessreport.js"></script>
+    <title>DeviceMotionEvent: A device lying flat on a horizontal surface with the screen upmost</title>
+    <script src="/resources/testharness.js"></script>
+    <script src="/resources/testharnessreport.js"></script>
     <link rel="author' title='Mosquito FP7">
     <link rel="reviewer author" title="Zhiqiang Zhang" href="mailto:zhiqiang.zhang@intel.com"> <!-- 2013-10-14 -->
   </head>
@@ -48,3 +48,4 @@
 	  </script>
   </body>
 </html>
+
