--- a/orientation-event/t025.html
+++ b/orientation-event/t025.html
@@ -3,8 +3,8 @@
   <head>
     <title>Implementations that are unable to provide acceleration data without the effect of gravity may instead supply the acceleration including the effect of gravity</title>
     <meta name=viewport content="width=device-width, maximum-scale=1.0, user-scalable=no">
-    <script src="http://w3c-test.org/resources/testharness.js"></script>
-    <script src="http://w3c-test.org/resources/testharnessreport.js"></script>
+    <script src="/resources/testharness.js"></script>
+    <script src="/resources/testharnessreport.js"></script>
     <link rel="author" title="Mosquito FP7">
     <link rel="reviewer author" title="Zhiqiang Zhang" href="mailto:zhiqiang.zhang@intel.com"> <!-- 2013-10-14 -->
   </head>
@@ -35,3 +35,4 @@
     </script> 
   </body>
 </html>
+
