--- a/orientation-event/horizontal-surface.html
+++ b/orientation-event/horizontal-surface.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>DeviceOrientationEvent: A device lying flat on a horizontal surface</title>
-    <script src="http://w3c-test.org/resources/testharness.js"></script>
-    <script src="http://w3c-test.org/resources/testharnessreport.js"></script>
+    <script src="/resources/testharness.js"></script>
+    <script src="/resources/testharnessreport.js"></script>
     <link rel="author' title='Mosquito FP7">
     <link rel="reviewer author" title="Zhiqiang Zhang" href="mailto:zhiqiang.zhang@intel.com"> <!-- 2013-10-12 -->
   </head>
@@ -33,3 +33,4 @@
     </script>
   </body>
 </html>
+
