--- a/orientation-event/t006.html
+++ b/orientation-event/t006.html
@@ -3,8 +3,8 @@
   <head>
     <title>Rotate the device frame around its z axis</title>
     <meta name=viewport content="width=device-width, maximum-scale=1.0, user-scalable=no">
-    <script src="http://w3c-test.org/resources/testharness.js"></script>
-    <script src="http://w3c-test.org/resources/testharnessreport.js"></script>
+    <script src="/resources/testharness.js"></script>
+    <script src="/resources/testharnessreport.js"></script>
     <link rel="author" title="Mosquito FP7">
     <link rel="reviewer author" title="Zhiqiang Zhang" href="mailto:zhiqiang.zhang@intel.com"> <!-- 2013-10-12 -->
   </head>
@@ -32,3 +32,4 @@
     </script>
   </body>
 </html>
+
