--- a/orientation-event/t028.html
+++ b/orientation-event/t028.html
@@ -3,8 +3,8 @@
   <head>
     <title>The interval property must be expressed in milliseconds. It must be a constant, to simplify filtering of the data by the Web application</title>
     <meta name=viewport content="width=device-width, maximum-scale=1.0, user-scalable=no">
-    <script src="http://w3c-test.org/resources/testharness.js"></script>
-    <script src="http://w3c-test.org/resources/testharnessreport.js"></script>
+    <script src="/resources/testharness.js"></script>
+    <script src="/resources/testharnessreport.js"></script>
     <link rel="author" title="Mosquito FP7">
     <link rel="reviewer author" title="Zhiqiang Zhang" href="mailto:zhiqiang.zhang@intel.com"> <!-- 2013-10-14 -->
   </head>
@@ -33,3 +33,4 @@
   </script>
   </body>
 </html>
+
