--- a/websockets/binaryType-wrong-value.htm
+++ b/websockets/binaryType-wrong-value.htm
@@ -17,7 +17,9 @@
         var isOpenCalled = false;
 
         wsocket.addEventListener('open', testOpen.step_func(function (evt) {
-            assert_throws("SYNTAX_ERR", function () { wsocket.binaryType = "notBlobOrArrayBuffer" });
+            assert_equals(wsocket.binaryType, "blob");
+            wsocket.binaryType = "notBlobOrArrayBuffer";
+            assert_equals(wsocket.binaryType, "blob");
             wsocket.close();
             isOpenCalled = true;
             testOpen.done();
