--- a/workers/interfaces/WorkerGlobalScope/onerror/propagate-to-window-onerror.html
+++ b/workers/interfaces/WorkerGlobalScope/onerror/propagate-to-window-onerror.html
@@ -11,11 +11,14 @@ x();
 <script src="/resources/testharnessreport.js"></script>
 <div id="log"></div>
 <script>
+setup({
+  allow_uncaught_exception: true,
+});
 async_test(function() {
   var worker = new Worker('#');
   var timeout = setTimeout(this.step_func(function() {
     assert_unreached();
-  }, 500);
+  }, 500));
   window.onerror = this.step_func(function(a, b, c, d) {
     assert_true(typeof a, 'string', 'first argument');
     assert_equals(b, document.URL+'#', 'second argument');
