--- a/2dcontext/conformance-requirements/2d.coordinatespace-manual.html
+++ b/2dcontext/conformance-requirements/2d.coordinatespace-manual.html
@@ -14,7 +14,7 @@
 <p class="notes">This should not be upside down.
 <p class="output">Actual output:</p>
 <canvas id="c" class="output" width="100" height="50"><p class="fallback">FAIL (fallback content)</p></canvas>
-<p class="output expectedtext">Expected output:<p><img src="2d.coordinatespace.png" class="output expected" id="expected" alt="">
+<p class="output expectedtext">Expected output:<p><img src="2d.coordinatespace-manual.png" class="output expected" id="expected" alt="">
 <ul id="d"></ul>
 <script>
 var t = async_test("Coordinate space goes from top-left to bottom-right");
