--- a/2dcontext/drawing-text-to-the-canvas/2d.text.draw.fill.rtl-manual.html
+++ b/2dcontext/drawing-text-to-the-canvas/2d.text.draw.fill.rtl-manual.html
@@ -14,7 +14,7 @@
 
 <p class="output">Actual output:</p>
 <canvas id="c" class="output" width="100" height="50"><p class="fallback">FAIL (fallback content)</p></canvas>
-<p class="output expectedtext">Expected output:<p><img src="2d.text.draw.fill.rtl.png" class="output expected" id="expected" alt="">
+<p class="output expectedtext">Expected output:<p><img src="2d.text.draw.fill.rtl-manual.png" class="output expected" id="expected" alt="">
 <ul id="d"></ul>
 <script>
 var t = async_test("fillText respects Right-To-Left Override characters");
