--- a/2dcontext/shadows/2d.shadow.blur.high-manual.html
+++ b/2dcontext/shadows/2d.shadow.blur.high-manual.html
@@ -14,7 +14,7 @@
 
 <p class="output">Actual output:</p>
 <canvas id="c" class="output" width="100" height="50"><p class="fallback">FAIL (fallback content)</p></canvas>
-<p class="output expectedtext">Expected output:<p><img src="2d.shadow.blur.high.png" class="output expected" id="expected" alt="">
+<p class="output expectedtext">Expected output:<p><img src="2d.shadow.blur.high-manual.png" class="output expected" id="expected" alt="">
 <ul id="d"></ul>
 <script>
 var t = async_test("Shadows look correct for large blurs");
