--- a/html/semantics/embedded-content-0/the-canvas-element/2d.scaled-manual.html
+++ b/html/semantics/embedded-content-0/the-canvas-element/2d.scaled-manual.html
@@ -14,7 +14,7 @@
 
 <p class="output">Actual output:</p>
 <canvas id="c" class="output" width="50" height="25" style="width: 100px; height: 50px"><p class="fallback">FAIL (fallback content)</p></canvas>
-<p class="output expectedtext">Expected output:<p><img src="2d.scaled.png" class="output expected" id="expected" alt="">
+<p class="output expectedtext">Expected output:<p><img src="2d.scaled-manual.png" class="output expected" id="expected" alt="">
 <ul id="d"></ul>
 <script>
 var t = async_test("CSS-scaled canvases get drawn correctly");
