--- a/old-tests/submission/Opera/media/track/track-element/cors/010.html
+++ b/old-tests/submission/Opera/media/track/track-element/cors/010.html
@@ -4,7 +4,7 @@
 <script src="/resources/testharnessreport.js"></script>
 <div id=log></div>
 <script src=/common/utils.js></script>
-<script src=support/common.js></script>
+<script src=support/common.js?pipe=sub></script>
 <script>
 var expected = {event:'error', requests:[{cors:origin, cookie:'no'}]};
 </script>
