--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-004.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-004.html
@@ -3,6 +3,8 @@
 <head>
     <title>CSS Test: One named flow, text content flowing into one multi-column region</title>
     <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com"/>
+    <!-- Reviewed on Github on 09-26-2013: https://github.com/w3c/csswg-test/pull/89 -->
+    <link rel="reviewer" title="Mihai Balan" href="mailto:mibalan@adobe.com"/>
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property"/>
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property"/>
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#multi-column-regions"/>
