--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-016.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-016.html
@@ -3,11 +3,13 @@
 <head>
 <title>CSS Test: One named flow multi-column container, monolithic 
                  content flowing into multiple regions</title>
-<link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com"/>
-<link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property"/>
-<link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property"/>
-<link rel="help" href="http://www.w3.org/TR/css3-multicol/#columns"/>
-<link rel="match" href="reference/regions-multicol-016-ref.html"/>
+    <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com"/>
+    <!-- Reviewed on Github on 09-26-2013: https://github.com/w3c/csswg-test/pull/89 -->
+    <link rel="reviewer" title="Mihai Balan" href="mailto:mibalan@adobe.com"/>
+    <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property"/>
+    <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property"/>
+    <link rel="help" href="http://www.w3.org/TR/css3-multicol/#columns"/>
+    <link rel="match" href="reference/regions-multicol-016-ref.html"/>
     <meta name="assert" content="This test checks that monolithic content 
                                  flows through multiple regions from the named flow
                                  multi-column container and that it overflows the last 
