--- a/contributors/adobe/submitted/regions/interactivity/resizing/regions-resizing-001.html
+++ b/contributors/adobe/submitted/regions/interactivity/resizing/regions-resizing-001.html
@@ -7,7 +7,7 @@
 		<link rel="help" href="http://www.w3.org/TR/css3-regions/#flow-from">
 		<meta name="flags" content="dom ahem http">
 		<meta name="assert" content="Test checks that resizing the viewport of a page containing a region
-				that has is sized to a percentage of the body correctly relayouts the region's contents.">
+				that is sized to a percentage of the body correctly relayouts the region's contents.">
 		<link rel="match" href="reference/regions-resizing-001-ref.html">
 		<script id="test-styles" type="text/css">
 		#region {
@@ -16,10 +16,10 @@
 		</script>
 		<script src="support/util.js" type="text/javascript"></script>
 		<script type="text/javascript">
-		window.onload = function() {
+		window.addEventListener("load", function() {
 			injectStylesInFrame("#test-styles", "iframe");
 			resizeViewportTo("iframe", 160, 400);
-		}
+		})
 		</script>
 	</head>
 	<body>
