--- a/contributors/adobe/submitted/regions/interactivity/resizing/regions-resizing-002.html
+++ b/contributors/adobe/submitted/regions/interactivity/resizing/regions-resizing-002.html
@@ -21,10 +21,10 @@
 		</script>
 		<script src="support/util.js" type="text/javascript"></script>
 		<script type="text/javascript">
-		window.onload = function() {
+		window.addEventListener("load", function() {
 			injectStylesInFrame("#test-styles", "iframe");
 			resizeViewportTo("iframe", 80, 100);
-		}
+		});
 		</script>
 	</head>
 	<body>
