--- a/contributors/adobe/submitted/regions/interactivity/resizing/regions-resizing-003.html
+++ b/contributors/adobe/submitted/regions/interactivity/resizing/regions-resizing-003.html
@@ -18,10 +18,10 @@
 		</script>
 		<script src="support/util.js" type="text/javascript"></script>
 		<script type="text/javascript">
-		window.onload = function() {
+		window.addEventListener("load", function() {
 			injectStylesInFrame("#test-styles", "iframe");
 			resizeViewportTo("iframe", 100, 100);
-		}
+		})
 		</script>
 	</head>
 	<body>
