--- a/contributors/adobe/submitted/regions/interactivity/resizing/regions-resizing-005.html
+++ b/contributors/adobe/submitted/regions/interactivity/resizing/regions-resizing-005.html
@@ -8,7 +8,7 @@
 		<link rel="help" href="http://www.w3.org/TR/css3-regions/#regions-visual-formatting-details">
 		<meta name="flags" content="dom ahem http">
 		<meta name="assert" content="Test checks that resizing the viewport of a page containing a region
-				that has a percentage size relative to the body and is floated correctly relayouts
+				that has a percentage size relative to the body and is floated, correctly relayouts
 				the region's contents.">
 		<link rel="match" href="reference/regions-resizing-005-ref.html">
 		<script id="test-styles" type="text/css">
@@ -19,10 +19,10 @@
 		</script>
 		<script src="support/util.js" type="text/javascript"></script>
 		<script type="text/javascript">
-		window.onload = function() {
+		window.addEventListener("load", function() {
 			injectStylesInFrame("#test-styles", "iframe");
 			resizeViewportTo("iframe", 160, 100);
-		}
+		})
 		</script>
 	</head>
 	<body>
