--- a/contributors/adobe/submitted/regions/interactivity/resizing/regions-resizing-010.html
+++ b/contributors/adobe/submitted/regions/interactivity/resizing/regions-resizing-010.html
@@ -22,10 +22,10 @@
 		</script>
 		<script src="support/util.js" type="text/javascript"></script>
 		<script type="text/javascript">
-		window.onload = function() {
+		window.addEventListener("load", function() {
 			injectStylesInFrame("#test-styles", "iframe");
 			resizeViewportTo("iframe", 240, 200);
-		}
+		})
 		</script>
 	</head>
 	<body>
