--- a/contributors/adobe/submitted/regions/interactivity/resizing/regions-resizing-011.html
+++ b/contributors/adobe/submitted/regions/interactivity/resizing/regions-resizing-011.html
@@ -11,25 +11,25 @@
 				has a percentage size correctly relayouts the region's contents.">
 		<link rel="match" href="reference/regions-resizing-011-ref.html">
 		<script id="test-styles" type="text/css">
-		#r1, #r2 {
+		#region1, #region2 {
 			margin: 10px;
 		}
 
-		#r1 {
+		#region1 {
 			width: 80px;
 			height: 80px;
 		}
 
-		#r2 {
+		#region2 {
 			width: 40%;
 		}
 		</script>
 		<script src="support/util.js" type="text/javascript"></script>
 		<script type="text/javascript">
-		window.onload = function() {
+		window.addEventListener("load", function() {
 			injectStylesInFrame("#test-styles", "iframe");
 			resizeViewportTo("iframe", 200, 200);
-		}
+		})
 		</script>
 	</head>
 	<body>
