--- a/contributors/adobe/submitted/regions/interactivity/resizing/support/two-regions-in-container.html
+++ b/contributors/adobe/submitted/regions/interactivity/resizing/support/two-regions-in-container.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -18,7 +18,7 @@
 		line-height: 1em;
 		color: green;
 	}
-	#r1, #r2 {
+	#region1, #region2 {
 		flow-from: flow;
 	}
 	</style>
@@ -31,8 +31,8 @@
 		</div>
 	</div>
 	<div id="region-parent">
-		<div id="r1"></div>
-		<div id="r2"></div>
+		<div id="region1"></div>
+		<div id="region2"></div>
 	</div>
 	<script src="util.js" type="text/javascript"></script>
 </body>
