Commented code as per @maerean's request

--- a/contributors/adobe/submitted/regions/interactivity/resizing/regions-resizing-006.html
+++ b/contributors/adobe/submitted/regions/interactivity/resizing/regions-resizing-006.html
@@ -10,6 +10,8 @@
 				that has a percentage size relative to a percentage-sized parent correctly relayouts
 				the region's contents.">
 		<link rel="match" href="reference/regions-resizing-001-ref.html">
+		<!-- The <script type="text/css"> below is just a textual container for styles that will be
+		injected in the iframe at load time.-->
 		<script id="test-styles" type="text/css">
 		html, body {
 			height: 100%;
