--- a/contributors/adobe/submitted/regions/interactivity/resizing/regions-resizing-001.html
+++ b/contributors/adobe/submitted/regions/interactivity/resizing/regions-resizing-001.html
@@ -9,6 +9,8 @@
 		<meta name="assert" content="Test checks that resizing the viewport of a page containing a region
 				that is sized to a percentage of the body correctly relayouts the region's contents.">
 		<link rel="match" href="reference/regions-resizing-001-ref.html">
+		<!-- The <script type="text/css"> below is just a textual container for styles that will be
+		injected in the iframe at load time.-->
 		<script id="test-styles" type="text/css">
 		#region {
 			width: 50%;
