--- a/contributors/adobe/submitted/regions/interactivity/resizing/regions-resizing-007.html
+++ b/contributors/adobe/submitted/regions/interactivity/resizing/regions-resizing-007.html
@@ -11,6 +11,8 @@
 				that has a percentage size relative to a parent sized using viewport units correctly
 				relayouts the region's contents.">
 		<link rel="match" href="reference/regions-resizing-001-ref.html">
+		<!-- The <script type="text/css"> below is just a textual container for styles that will be
+		injected in the iframe at load time.-->
 		<script id="test-styles" type="text/css">
 		html, body {
 			height: 100%;
