--- a/contributors/adobe/submitted/regions/interactivity/resizing/regions-resizing-009.html
+++ b/contributors/adobe/submitted/regions/interactivity/resizing/regions-resizing-009.html
@@ -12,6 +12,8 @@
 				autosized region when the content flowed in it is sized with viewport units correctly
 				relayouts the region's contents.">
 		<link rel="match" href="reference/regions-resizing-001-ref.html">
+		<!-- The <script type="text/css"> below is just a textual container for styles that will be
+		injected in the iframe at load time.-->
 		<script id="test-styles" type="text/css">
 		#content {
 			width: 40vw;
