--- a/contributors/adobe/submitted/regions/interactivity/resizing/regions-resizing-010.html
+++ b/contributors/adobe/submitted/regions/interactivity/resizing/regions-resizing-010.html
@@ -10,6 +10,8 @@
 				percentage sized region when the content flowed in it is floated, correctly
 				relayouts the region's contents.">
 		<link rel="match" href="reference/regions-resizing-001-ref.html">
+		<!-- The <script type="text/css"> below is just a textual container for styles that will be
+		injected in the iframe at load time.-->
 		<script id="test-styles" type="text/css">
 		#content {
 			/* Will not be visibly offset to the right since the text align is still left-aligned
