--- a/contributors/adobe/submitted/regions/interactivity/resizing/regions-resizing-011.html
+++ b/contributors/adobe/submitted/regions/interactivity/resizing/regions-resizing-011.html
@@ -10,6 +10,8 @@
 				regions and a single named flow where one region has a fixed size size and the other
 				has a percentage size correctly relayouts the region's contents.">
 		<link rel="match" href="reference/regions-resizing-011-ref.html">
+		<!-- The <script type="text/css"> below is just a textual container for styles that will be
+		injected in the iframe at load time.-->
 		<script id="test-styles" type="text/css">
 		#region1, #region2 {
 			margin: 10px;
