--- a/contributors/adobe/submitted/regions/interactivity/resizing/regions-resizing-012.html
+++ b/contributors/adobe/submitted/regions/interactivity/resizing/regions-resizing-012.html
@@ -11,6 +11,8 @@
 				regions and a single named flow where one region has percentage size and the other
 				is auto-sized correctly relayouts the region's contents.">
 		<link rel="match" href="reference/regions-resizing-011-ref.html">
+		<!-- The <script type="text/css"> below is just a textual container for styles that will be
+		injected in the iframe at load time.-->
 		<script id="test-styles" type="text/css">
 		html, body {
 			height: 100%;
