--- a/contributors/adobe/submitted/regions/interactivity/resizing/regions-resizing-013.html
+++ b/contributors/adobe/submitted/regions/interactivity/resizing/regions-resizing-013.html
@@ -9,6 +9,8 @@
 		<meta name="assert" content="Test checks that changing the size of a region via media queries
 				correctly relayouts the region's contents.">
 		<link rel="match" href="reference/regions-resizing-001-ref.html">
+		<!-- The <script type="text/css"> below is just a textual container for styles that will be
+		injected in the iframe at load time.-->
 		<script id="test-styles" type="text/css">
 		html, body {
 			height: 100%;
