--- a/contributors/i18n/submitted/css3-selectors/css3-selectors-lang-001.html
+++ b/contributors/i18n/submitted/css3-selectors/css3-selectors-lang-001.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8"/>
 <title>:lang(es), lang="es"</title>
 <link rel='author' title='Richard Ishida' href='mailto:ishida@w3.org'>
-<link rel='help' href='http://www.w3.org/TR/selectors/Overview.html#lang-pseudo'>
+<link rel='help' href='http://www.w3.org/TR/css3-selectors/#lang-pseudo'>
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <style type='text/css'>
