--- a/contributors/i18n/submitted/css3-selectors/css3-selectors-lang-045.html
+++ b/contributors/i18n/submitted/css3-selectors/css3-selectors-lang-045.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8"/>
 <title>[lang="es"], lang="es-MX"</title>
 <link rel='author' title='Richard Ishida' href='mailto:ishida@w3.org'>
-<link rel='help' href='http://www.w3.org/TR/selectors/#attribute-selectors'>
+<link rel='help' href='http://www.w3.org/TR/css3-selectors/#attribute-selectors'>
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <style type='text/css'>
