renamed utility function as per @maerean's comment

--- a/contributors/adobe/submitted/regions/interactivity/resizing/regions-resizing-009.html
+++ b/contributors/adobe/submitted/regions/interactivity/resizing/regions-resizing-009.html
@@ -27,7 +27,7 @@
 		<script src="support/util.js" type="text/javascript"></script>
 		<script type="text/javascript">
 		window.addEventListener("load", function() {
-			injectStylesInFrame("#test-styles", "iframe");
+			injectStylesInIFrame("#test-styles", "iframe");
 			resizeViewportTo("iframe", 200, 200);
 		})
 		</script>
