--- a/contributors/adobe/submitted/regions/interactivity/resizing/regions-resizing-004.html
+++ b/contributors/adobe/submitted/regions/interactivity/resizing/regions-resizing-004.html
@@ -20,7 +20,7 @@
 		<script src="support/util.js" type="text/javascript"></script>
 		<script type="text/javascript">
 		window.addEventListener("load", function() {
-			injectStylesInFrame("#test-styles", "iframe");
+			injectStylesInIFrame("#test-styles", "iframe");
 			resizeViewportTo("iframe", 80, 200);
 		})
 		</script>
