--- a/contributors/adobe/submitted/regions/interactivity/resizing/regions-resizing-005.html
+++ b/contributors/adobe/submitted/regions/interactivity/resizing/regions-resizing-005.html
@@ -22,7 +22,7 @@
 		<script src="support/util.js" type="text/javascript"></script>
 		<script type="text/javascript">
 		window.addEventListener("load", function() {
-			injectStylesInFrame("#test-styles", "iframe");
+			injectStylesInIFrame("#test-styles", "iframe");
 			resizeViewportTo("iframe", 160, 100);
 		})
 		</script>
