--- a/contributors/adobe/submitted/regions/interactivity/resizing/regions-resizing-006.html
+++ b/contributors/adobe/submitted/regions/interactivity/resizing/regions-resizing-006.html
@@ -28,7 +28,7 @@
 		<script src="support/util.js" type="text/javascript"></script>
 		<script type="text/javascript">
 		window.addEventListener("load", function() {
-			injectStylesInFrame("#test-styles", "iframe");
+			injectStylesInIFrame("#test-styles", "iframe");
 			resizeViewportTo("iframe", 320, 320);
 		})
 		</script>
