--- a/contributors/adobe/submitted/regions/interactivity/resizing/regions-resizing-010.html
+++ b/contributors/adobe/submitted/regions/interactivity/resizing/regions-resizing-010.html
@@ -25,7 +25,7 @@
 		<script src="support/util.js" type="text/javascript"></script>
 		<script type="text/javascript">
 		window.addEventListener("load", function() {
-			injectStylesInFrame("#test-styles", "iframe");
+			injectStylesInIFrame("#test-styles", "iframe");
 			resizeViewportTo("iframe", 240, 200);
 		})
 		</script>
