--- a/contributors/adobe/submitted/regions/interactivity/resizing/regions-resizing-012.html
+++ b/contributors/adobe/submitted/regions/interactivity/resizing/regions-resizing-012.html
@@ -35,7 +35,7 @@
 		<script src="support/util.js" type="text/javascript"></script>
 		<script type="text/javascript">
 		window.addEventListener("load", function() {
-			injectStylesInFrame("#test-styles", "iframe");
+			injectStylesInIFrame("#test-styles", "iframe");
 			resizeViewportTo("iframe", 100, 200);
 		})
 		</script>
