--- a/contributors/adobe/submitted/regions/interactivity/resizing/regions-resizing-013.html
+++ b/contributors/adobe/submitted/regions/interactivity/resizing/regions-resizing-013.html
@@ -33,7 +33,7 @@
 		<script src="support/util.js" type="text/javascript"></script>
 		<script type="text/javascript">
 		window.addEventListener("load", function() {
-			injectStylesInFrame("#test-styles", "iframe");
+			injectStylesInIFrame("#test-styles", "iframe");
 			resizeViewportTo("iframe", 299, 299);
 		})
 		</script>
