Give all reflection tests long timeouts

--- a/html/dom/reflection-original.html
+++ b/html/dom/reflection-original.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <title>HTML5 reflection tests</title>
+<meta name=timeout content=long>
 <p>This is <em>not</em> the authoritative conformance test suite for
 reflection.  The authoritative tests can be found here, split up into sections:
 
