--- a/html/semantics/embedded-content-0/media-elements/canPlayType_two_implies_one_4.html
+++ b/html/semantics/embedded-content-0/media-elements/canPlayType_two_implies_one_4.html
@@ -13,11 +13,13 @@
   <script>
 test(function() {
  var v = document.getElementById("v");
- if (v.canPlayType('video/ogg; codecs="theora, vorbis"') == "probably") {
-  assert_equals(
-   v.canPlayType('video/ogg; codecs="theora, vorbis"'),
-   v.canPlayType('video/ogg; codecs="vorbis"'),
-   "ability to play two codecs implies the ability to play one");
+ if (v.canPlayType('video/ogg; codecs="theora, vorbis"') == "maybe") {
+   assert_in_array(v.canPlayType('video/ogg; codecs="vorbis"'), ["maybe", "probably"], "ability to play two codecs implies the ability to play one");
+ } else if (v.canPlayType('video/ogg; codecs="theora, vorbis"') == "probably") {
+   assert_equals(
+     v.canPlayType('video/ogg; codecs="theora, vorbis"'),
+     v.canPlayType('video/ogg; codecs="vorbis"'),
+     "ability to play two codecs implies the ability to play one");
  }
 });
   </script>
