--- a/html/semantics/embedded-content-0/media-elements/canPlayType_two_implies_one_6.html
+++ b/html/semantics/embedded-content-0/media-elements/canPlayType_two_implies_one_6.html
@@ -13,11 +13,13 @@
   <script>
 test(function() {
  var v = document.getElementById("v");
- if (v.canPlayType('video/mp4; codecs="avc1.42E01E, mp4a.40.2"') == "probably") {
-  assert_equals(
-   v.canPlayType('video/mp4; codecs="avc1.42E01E, mp4a.40.2"'),
-   v.canPlayType('video/ogg; codecs="mp4a.40.2"'),
-   "ability to play two codecs implies the ability to play one");
+ if (v.canPlayType('video/mp4; codecs="avc1.42E01E, mp4a.40.2"') == "maybe") {
+   assert_in_array(v.canPlayType('video/mp4; codecs="mp4a.40.2"'), ["maybe", "probably"], "ability to play two codecs implies the ability to play one");
+ } else if (v.canPlayType('video/mp4; codecs="avc1.42E01E, mp4a.40.2"') == "probably") {
+   assert_equals(
+     v.canPlayType('video/mp4; codecs="avc1.42E01E, mp4a.40.2"'),
+     v.canPlayType('video/mp4; codecs="mp4a.40.2"'),
+     "ability to play two codecs implies the ability to play one");
  }
 });
   </script>
