--- a/html/semantics/embedded-content-0/media-elements/currentSrc_nonempty_after_adding_source_child.html
+++ b/html/semantics/embedded-content-0/media-elements/currentSrc_nonempty_after_adding_source_child.html
@@ -12,17 +12,19 @@
 test(function() {
   var v = document.createElement("audio");
   document.body.appendChild(v);
-  assert_true(
-   v.currentSrc == "",
-   "audioElement.currentSrc should be empty if there is no source");
+  assert_equals(
+    v.currentSrc,
+    "",
+    "audioElement.currentSrc should be empty if there is no source");
   var s = document.createElement("source");
   s.src = ".";
   v.appendChild(s);
   var t = async_test("audioElement.currentSrc should not be empty after adding source element (even with a bogus value)");
   window.setTimeout(function() {
    t.step(function() {
-    assert_false(
-     v.currentSrc == "")});
+    assert_not_equals(
+      v.currentSrc,
+      "")});
    t.done();
   }, 0);
 }, "audio.currentSrc - non-empty after adding source element");
@@ -30,17 +32,19 @@ test(function() {
 test(function() {
   var v = document.createElement("video");
   document.body.appendChild(v);
-  assert_true(
-   v.currentSrc == "",
-   "videoElement.currentSrc should be empty if there is no source");
+  assert_equals(
+    v.currentSrc,
+    "",
+    "videoElement.currentSrc should be empty if there is no source");
   var s = document.createElement("source");
   s.src = ".";
   v.appendChild(s);
   var t = async_test("videoElement.currentSrc should not be empty after adding source element (even with a bogus value)");
   window.setTimeout(function() {
    t.step(function() {
-    assert_false(
-     v.currentSrc == "")});
+    assert_not_equals(
+      v.currentSrc,
+      "")});
    t.done();
   }, 0);
 }, "video.currentSrc - non-empty after adding source element");
