--- a/html/semantics/embedded-content-0/media-elements/readyState_during_playing.html
+++ b/html/semantics/embedded-content-0/media-elements/readyState_during_playing.html
@@ -15,11 +15,11 @@
   <div id="log"></div>
   <script>
 test(function() {
-  var t = async_test("audio.readyState should be >= HAVE_FUTURE_DATA during playing event", {timeout:30000});
+  var t = async_test("audio.readyState should be, HAVE_FUTURE_DATA during playing event", {timeout:10000});
   var a = document.getElementById("a");
   a.addEventListener("playing", function() {
     t.step(function() {
-     assert_true(a.readyState >= a.HAVE_FUTURE_DATA);
+     assert_greater_than_equal(a.readyState, a.HAVE_FUTURE_DATA);
     });
     t.done();
     a.pause();
@@ -28,11 +28,11 @@ test(function() {
 }, "audio events - readyState property during playing");
 
 test(function() {
-  var t = async_test("video.readyState should be >= HAVE_FUTURE_DATA during playing event", {timeout:30000});
+  var t = async_test("video.readyState should be, HAVE_FUTURE_DATA during playing event", {timeout:10000});
   var v = document.getElementById("v");
   v.addEventListener("playing", function() {
     t.step(function() {
-     assert_true(v.readyState >= v.HAVE_FUTURE_DATA);
+     assert_greater_than_equal(v.readyState, v.HAVE_FUTURE_DATA);
     });
     t.done();
     v.pause();
