use assert_idl_attribute to check method existence

--- a/html/semantics/embedded-content-0/media-elements/canPlayType_method_exists.html
+++ b/html/semantics/embedded-content-0/media-elements/canPlayType_method_exists.html
@@ -14,9 +14,10 @@
   <div id="log"></div>
   <script>
 test(function() {
- assert_true(
-  !!document.getElementById("a").canPlayType,
-  "audioElement.canPlayType method exists");
+ assert_idl_attribute(
+   document.getElementById("a"),
+   "canPlayType",
+   "audioElement.canPlayType method exists");
 }, "audio.canPlayType() - existence of method");
 
 test(function() {
