remove unneeded assertions minimize timeout value

--- a/html/semantics/embedded-content-0/media-elements/error_null.html
+++ b/html/semantics/embedded-content-0/media-elements/error_null.html
@@ -21,9 +21,9 @@ test(function() {
 }, "audio.error - null if no source");
 test(function() {
  assert_equals(
-  document.getElementById("a").error,
+  document.getElementById("v").error,
   null,
-  "audioElement.error property is null if no source");
+  "videoElement.error property is null if no source");
 }, "video.error - null if no source");
   </script>
  </body>
