--- a/html/semantics/embedded-content-0/media-elements/readyState_during_loadedmetadata.html
+++ b/html/semantics/embedded-content-0/media-elements/readyState_during_loadedmetadata.html
@@ -15,7 +15,7 @@
   <div id="log"></div>
   <script>
 test(function() {
-  var t = async_test("audio.readyState should be, HAVE_METADATA during loadedmetadata event", {timeout:5000});
+  var t = async_test("audio.readyState should be >= HAVE_METADATA during loadedmetadata event", {timeout:5000});
   var a = document.getElementById("a");
   a.addEventListener("loadedmetadata", function() {
     t.step(function() {
@@ -28,7 +28,7 @@ test(function() {
 }, "audio events - readyState property during loadedmetadata");
 
 test(function() {
-  var t = async_test("video.readyState should be, HAVE_METADATA during loadedmetadata event", {timeout:5000});
+  var t = async_test("video.readyState should be >= HAVE_METADATA during loadedmetadata event", {timeout:5000});
   var v = document.getElementById("v");
   v.addEventListener("loadedmetadata", function() {
     t.step(function() {
